Removed dependence on the ADM-to-BSSN converter.

--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,9 +124,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote to file \"GiRaFFE_HO/src/B_from_A_10.h\"\n",
+      "Wrote to file \"GiRaFFE_HO/src/B_from_A_8.h\"\n",
+      "Wrote to file \"GiRaFFE_HO/src/B_from_A_6.h\"\n",
+      "Wrote to file \"GiRaFFE_HO/src/B_from_A_4.h\"\n",
+      "Wrote to file \"GiRaFFE_HO/src/B_from_A_2.h\"\n",
+      "Wrote to file \"GiRaFFE_HO/src/B_from_A_2x0D.h\"\n",
+      "Wrote to file \"GiRaFFE_HO/src/B_from_A_2x0U.h\"\n",
+      "Wrote to file \"GiRaFFE_HO/src/B_from_A_2x1D.h\"\n",
+      "Wrote to file \"GiRaFFE_HO/src/B_from_A_2x1U.h\"\n",
+      "Wrote to file \"GiRaFFE_HO/src/B_from_A_2x2D.h\"\n",
+      "Wrote to file \"GiRaFFE_HO/src/B_from_A_2x2U.h\"\n"
+     ]
+    }
+   ],
    "source": [
     "#AD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"AD\",DIM=3)\n",
     "# Step 2: Import the four metric\n",
@@ -295,9 +313,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFE_HO/src/GiRaFFE.c\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile GiRaFFE_HO/src/GiRaFFE.c\n",
     "#include <math.h>\n",
@@ -652,9 +678,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFE_HO/src/driver_conserv_to_prims_FFE.C\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile GiRaFFE_HO/src/driver_conserv_to_prims_FFE.C\n",
     "/* We evolve forward in time a set of functions called the \n",
@@ -705,11 +739,6 @@
     "  // We use proper C++ here, for file I/O later.\n",
     "  using namespace std;\n",
     "\n",
-    "  // Here we convert ADM variables (from ADMBase) to the BSSN-based variables expected by this routine.\n",
-    "  GiRaFFE_convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij(cctkGH,cctk_lsh,  gxx,gxy,gxz,gyy,gyz,gzz,alp,\n",
-    "                                                                        gtxx,gtxy,gtxz,gtyy,gtyz,gtzz,\n",
-    "                                                                        gtupxx,gtupxy,gtupxz,gtupyy,gtupyz,gtupzz,\n",
-    "                                                                        phi_bssn,psi_bssn,lapm1);\n",
     "  const int imin=0,jmin=0,kmin=0;\n",
     "  const int imax=cctk_lsh[0],jmax=cctk_lsh[1],kmax=cctk_lsh[2];\n",
     "  \n",
@@ -727,7 +756,7 @@
     "        const CCTK_REAL rL = r[index];\n",
     "        if(rL>min_radius_inside_of_which_conserv_to_prims_FFE_and_FFE_evolution_is_DISABLED) {\n",
     "\n",
-    "          const CCTK_REAL sqrtg = sqrt(gammadet); // Determinant of 3-metric\n",
+    "          const CCTK_REAL sqrtg = sqrt(gammadet[index]); // Determinant of 3-metric\n",
     "\n",
     "          // \\gamma_{ij}, computed from \\tilde{\\gamma}_{ij}\n",
     "          const CCTK_REAL gxxL = gxx[index];\n",
@@ -878,24 +907,24 @@
     "                ww=0;\n",
     "                // FIXME: NECESSARY?\n",
     "                //psi_bssn[index] = exp(phi[index]);\n",
-    "                METRIC[ww] = phi_bssn[index];ww++;\n",
+    "                METRIC[ww] = (1.0/12.0) * log(gammadet[index]);ww++;\n",
     "                METRIC[ww] = dummy;          ww++; // Don't need to set psi.\n",
-    "                METRIC[ww] = gtxx[index];    ww++;\n",
-    "                METRIC[ww] = gtxy[index];    ww++;\n",
-    "                METRIC[ww] = gtxz[index];    ww++;\n",
-    "                METRIC[ww] = gtyy[index];    ww++;\n",
-    "                METRIC[ww] = gtyz[index];    ww++;\n",
-    "                METRIC[ww] = gtzz[index];    ww++;\n",
-    "                METRIC[ww] = lapm1[index];   ww++;\n",
+    "                METRIC[ww] = gxx[index];    ww++;\n",
+    "                METRIC[ww] = gxy[index];    ww++;\n",
+    "                METRIC[ww] = gxz[index];    ww++;\n",
+    "                METRIC[ww] = gyy[index];    ww++;\n",
+    "                METRIC[ww] = gyz[index];    ww++;\n",
+    "                METRIC[ww] = gzz[index];    ww++;\n",
+    "                METRIC[ww] = alp[index]-1;   ww++;\n",
     "                METRIC[ww] = betax[index];   ww++;\n",
     "                METRIC[ww] = betay[index];   ww++;\n",
     "                METRIC[ww] = betaz[index];   ww++;\n",
-    "                METRIC[ww] = gtupxx[index];  ww++;\n",
-    "                METRIC[ww] = gtupyy[index];  ww++;\n",
-    "                METRIC[ww] = gtupzz[index];  ww++;\n",
-    "                METRIC[ww] = gtupxy[index];  ww++;\n",
-    "                METRIC[ww] = gtupxz[index];  ww++;\n",
-    "                METRIC[ww] = gtupyz[index];  ww++;\n",
+    "                METRIC[ww] = gammaUU00[index];  ww++;\n",
+    "                METRIC[ww] = gammaUU01[index];  ww++;\n",
+    "                METRIC[ww] = gammaUU02[index];  ww++;\n",
+    "                METRIC[ww] = gammaUU11[index];  ww++;\n",
+    "                METRIC[ww] = gammaUU12[index];  ww++;\n",
+    "                METRIC[ww] = gammaUU22[index];  ww++;\n",
     "\n",
     "                CCTK_REAL CONSERVS[NUM_CONSERVS] = {0.0, 0.0, 0.0}; // 3 conservative variables: Stilde_x, Stilde_y, Stilde_z\n",
     "                GiRaFFE_compute_conservatives(PRIMS,METRIC, CONSERVS);\n",
@@ -946,120 +975,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The previous driver depends on the function included below to convert ADM quantities to their BSSN counterparts."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%writefile GiRaFFE_HO/src/convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.C\n",
-    "#include \"cctk.h\"\n",
-    "#include <cmath>\n",
-    "#include <cstdio>\n",
-    "#include <cstdlib>\n",
-    "#include \"cctk_Parameters.h\"\n",
-    "\n",
-    "void GiRaFFE_convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij\n",
-    "(const cGH *cctkGH,const int *cctk_lsh,\n",
-    " CCTK_REAL *gxx,CCTK_REAL *gxy,CCTK_REAL *gxz,CCTK_REAL *gyy,CCTK_REAL *gyz,CCTK_REAL *gzz,const CCTK_REAL *alp,\n",
-    " CCTK_REAL *gtxx,CCTK_REAL *gtxy,CCTK_REAL *gtxz,CCTK_REAL *gtyy,CCTK_REAL *gtyz,CCTK_REAL *gtzz,\n",
-    " CCTK_REAL *gtupxx,CCTK_REAL *gtupxy,CCTK_REAL *gtupxz,CCTK_REAL *gtupyy,CCTK_REAL *gtupyz,CCTK_REAL *gtupzz,\n",
-    " CCTK_REAL *phi,CCTK_REAL *psi,CCTK_REAL *lapm1) {\n",
-    "  DECLARE_CCTK_PARAMETERS; \n",
-    "#pragma omp parallel for\n",
-    "  for(int k=0;k<cctk_lsh[2];k++) for(int j=0;j<cctk_lsh[1];j++) for(int i=0;i<cctk_lsh[0];i++) {\n",
-    "        const int index=CCTK_GFINDEX3D(cctkGH,i,j,k);\n",
-    "        const CCTK_REAL gxx_physL=gxx[index];\n",
-    "        const CCTK_REAL gxy_physL=gxy[index];\n",
-    "        const CCTK_REAL gxz_physL=gxz[index];\n",
-    "        const CCTK_REAL gyy_physL=gyy[index];\n",
-    "        const CCTK_REAL gyz_physL=gyz[index];\n",
-    "        const CCTK_REAL gzz_physL=gzz[index];\n",
-    "\n",
-    "        /**********************************************************************\n",
-    "         * Compute \\tilde{\\gamma_{ij}}, phi, and psi (BSSN) from g_{ij} (ADM) *\n",
-    "         **********************************************************************/\n",
-    "        const CCTK_REAL gijdet = fabs(  gxx_physL * gyy_physL * gzz_physL + gxy_physL * gyz_physL * gxz_physL + gxz_physL * gxy_physL * gyz_physL\n",
-    "                                      - gxz_physL * gyy_physL * gxz_physL - gxy_physL * gxy_physL * gzz_physL - gxx_physL * gyz_physL * gyz_physL);\n",
-    "\n",
-    "        const CCTK_REAL phiL = (1.0/12.0) * log(gijdet);\n",
-    "        const CCTK_REAL psiL = exp(phiL);\n",
-    "\n",
-    "        const CCTK_REAL Psim4 = 1.0/(psiL*psiL*psiL*psiL);\n",
-    "        CCTK_REAL gtxxL = gxx_physL*Psim4;\n",
-    "        CCTK_REAL gtxyL = gxy_physL*Psim4;\n",
-    "        CCTK_REAL gtxzL = gxz_physL*Psim4;\n",
-    "        CCTK_REAL gtyyL = gyy_physL*Psim4;\n",
-    "        CCTK_REAL gtyzL = gyz_physL*Psim4;\n",
-    "        CCTK_REAL gtzzL = gzz_physL*Psim4;\n",
-    "        \n",
-    "        /*********************************\n",
-    "         * Apply det gtij = 1 constraint *\n",
-    "         *********************************/\n",
-    "        const CCTK_REAL gtijdet = gtxxL * gtyyL * gtzzL + gtxyL * gtyzL * gtxzL + gtxzL * gtxyL * gtyzL - \n",
-    "          gtxzL * gtyyL * gtxzL - gtxyL * gtxyL * gtzzL - gtxxL * gtyzL * gtyzL;\n",
-    "\n",
-    "        const CCTK_REAL gtijdet_Fm1o3 = fabs(1.0/cbrt(gtijdet));\n",
-    "\n",
-    "        gtxxL = gtxxL * gtijdet_Fm1o3;\n",
-    "        gtxyL = gtxyL * gtijdet_Fm1o3; \n",
-    "        gtxzL = gtxzL * gtijdet_Fm1o3; \n",
-    "        gtyyL = gtyyL * gtijdet_Fm1o3; \n",
-    "        gtyzL = gtyzL * gtijdet_Fm1o3; \n",
-    "        gtzzL = gtzzL * gtijdet_Fm1o3;\n",
-    "\n",
-    "        if(gtijdet<0.0) { CCTK_VWarn(CCTK_WARN_ALERT,__LINE__, __FILE__, CCTK_THORNSTRING,\n",
-    "                                     \"WARNING: det[3-metric]<0.0 at point  %d %d %d | cctk_lsh: %d %d %d. Hopefully this is occurring in gz's! gtij_phys = %.2e %.2e %.2e %.2e %.2e %.2e gtij_new = %.2e %.2e %.2e %.2e %.2e %.2e | gijdet = %.2e | gtijdet = %.2e\",\n",
-    "\t\t\t\t     i,j,k,cctk_lsh[0],cctk_lsh[1],cctk_lsh[2],gxx_physL,gxy_physL,gxz_physL,gyy_physL,gyz_physL,gzz_physL,gtxxL,gtxyL,gtxzL,gtyyL,gtyzL,gtzzL,-gijdet,gtijdet); }\n",
-    "\n",
-    "        const CCTK_REAL Psi4 = psiL*psiL*psiL*psiL;\n",
-    "        /*****************************************\n",
-    "         * Set all the needed BSSN gridfunctions *\n",
-    "         *****************************************/\n",
-    "        phi[index] = phiL;\n",
-    "        psi[index] = psiL;\n",
-    "\n",
-    "        lapm1[index] = alp[index] - 1.0;\n",
-    "\n",
-    "        gtxx[index] = gtxxL;\n",
-    "        gtxy[index] = gtxyL;\n",
-    "        gtxz[index] = gtxzL;\n",
-    "        gtyy[index] = gtyyL;\n",
-    "        gtyz[index] = gtyzL;\n",
-    "        gtzz[index] = gtzzL;\n",
-    "\n",
-    "        gxx[index] = gtxxL*Psi4;\n",
-    "        gxy[index] = gtxyL*Psi4;\n",
-    "        gxz[index] = gtxzL*Psi4;\n",
-    "        gyy[index] = gtyyL*Psi4;\n",
-    "        gyz[index] = gtyzL*Psi4;\n",
-    "        gzz[index] = gtzzL*Psi4;\n",
-    "\n",
-    "        gtupxx[index] =   ( gtyyL * gtzzL - gtyzL * gtyzL );\n",
-    "        gtupxy[index] = - ( gtxyL * gtzzL - gtyzL * gtxzL );\n",
-    "        gtupxz[index] =   ( gtxyL * gtyzL - gtyyL * gtxzL );\n",
-    "        gtupyy[index] =   ( gtxxL * gtzzL - gtxzL * gtxzL );\n",
-    "        gtupyz[index] = - ( gtxxL * gtyzL - gtxyL * gtxzL );\n",
-    "        gtupzz[index] =   ( gtxxL * gtyyL - gtxyL * gtxyL );\n",
-    "      }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "We will also include GiRaFFE_headers.h from the old version of GiRaFFE, which defines constants on which our conservative-to-primitive solver depends."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFE_HO/src/GiRaFFE_headers.h\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile GiRaFFE_HO/src/GiRaFFE_headers.h\n",
     "// To safeguard against double-including this header file:\n",
@@ -1157,9 +1088,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFE_HO/src/inlined_functions.C\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile GiRaFFE_HO/src/inlined_functions.C\n",
     "static inline CCTK_REAL fasterpow_ppm_reconstruct(const CCTK_REAL inputvar,const CCTK_REAL inputpow) {\n",
@@ -1343,9 +1282,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFE_HO/src/compute_conservatives_FFE.C\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile GiRaFFE_HO/src/compute_conservatives_FFE.C\n",
     "void GiRaFFE_compute_conservatives(const CCTK_REAL *PRIMS,  const CCTK_REAL *METRIC, CCTK_REAL *CONSERVS) {\n",
@@ -1420,9 +1367,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFE_HO/src/GiRaFFE_HydroBase_conversion.c\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile GiRaFFE_HO/src/GiRaFFE_HydroBase_conversion.c\n",
     "#include <math.h>\n",
@@ -1515,9 +1470,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFE_HO/interface.ccl\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile GiRaFFE_HO/interface.ccl\n",
     "implements: GiRaFFE_HO\n",
@@ -1580,13 +1543,6 @@
     "  u0\n",
     "} \"The zeroth component of the four velocity\"\n",
     "\n",
-    "#vvvvvvv BSSN-based quantities, computed from ADM quantities.v vvvvvvv#\n",
-    "cctk_real BSSN_quantities type = GF TAGS='prolongation=\"none\" Checkpoint=\"no\"'\n",
-    "{\n",
-    "   gtxx,gtxy,gtxz,gtyy,gtyz,gtzz,gtupxx,gtupxy,gtupxz,gtupyy,gtupyz,gtupzz,phi_bssn,psi_bssn,lapm1\n",
-    "} \"BSSN quantities, computed from ADM quantities\"\n",
-    "#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^#\n",
-    "\n",
     "#########################################\n",
     "###  Aliased functions from Carpet    ###\n",
     "#########################################\n",
@@ -1606,9 +1562,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFE_HO/param.ccl\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile GiRaFFE_HO/param.ccl\n",
     "shares: MethodOfLines\n",
@@ -1681,9 +1645,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFE_HO/schedule.ccl\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile GiRaFFE_HO/schedule.ccl\n",
     "STORAGE: GiRaFFE_rhs[1]\n",
@@ -1692,7 +1664,6 @@
     "STORAGE: GiRaFFE_Bs[3]\n",
     "STORAGE: GiRaFFE_Vs[3]\n",
     "STORAGE: GiRaFFE_u0[3]\n",
-    "STORAGE: BSSN_quantities[1]\n",
     "\n",
     "# POSTPOSTINITIAL\n",
     "schedule GROUP GiRaFFE_PostPostInitial at CCTK_POSTPOSTINITIAL before MoL_PostStep after HydroBase_Con2Prim\n",
@@ -1880,9 +1851,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFE_HO/src/make.code.defn\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile GiRaFFE_HO/src/make.code.defn\n",
     "SRCS = GiRaFFE.c driver_conserv_to_prims_FFE.C convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.C \\\n",
