--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -27,10 +27,228 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!mkdir interp_sph_grids_ETK     2>/dev/null # 2>/dev/null: Don't throw an error or warning if the directory already exists.\n",
+    "!mkdir interp_sph_grids_ETK/src 2>/dev/null # 2>/dev/null: Don't throw an error or warning if the directory already exists."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Low-Level ETK Interpolation Function\n",
+    "\n",
+    "We start by writing the low-level interpolation function **Interpolate_to_sph_grid()**, which  to file. \n",
+    "\n",
+    "**Interpolate_to_sph_grid()** takes as input\n",
+    "* **cctkGH**: Information about the underlying Cactus/Carpet grid hierarchy.\n",
+    "* **interp_num_points**: Number of destination interpolation points\n",
+    "* **point_x_temp, point_y_temp, point_z_temp**: Cartesian $(x,y,z)$ location for each of the **interp_num_points** interpolation points.\n",
+    "* **input_array_names[1]**: List of input gridfunction names to interpolate. We will do this only one gridfunction at a time, for gridfunction $Q_i$, as described above.\n",
+    "\n",
+    "**Interpolate_to_sph_grid()** outputs:\n",
+    "* **output_f[1]**: The gridfunction **input_array_names[1]** interpolated to the set of **interp_num_points** specified in the input."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting interp_sph_grids_ETK/src/Interpolate_to_sph_grid.h\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile interp_sph_grids_ETK/src/Interpolate_to_sph_grid.h\n",
+    "\n",
+    "#include <assert.h>\n",
+    "#include <stdio.h>\n",
+    "#include <stdlib.h>\n",
+    "#include <string.h>\n",
+    "#include <math.h>\n",
+    "#include <ctype.h>\n",
+    "#include \"cctk.h\"\n",
+    "#include \"cctk_Arguments.h\"\n",
+    "#include \"cctk_Parameters.h\"\n",
+    "#include \"cctk_Functions.h\"\n",
+    "#include \"util_Table.h\"\n",
+    "#include \"util_String.h\"\n",
+    "\n",
+    "void Interpolate_to_sph_grid(cGH *cctkGH,CCTK_INT interp_num_points,\n",
+    "                             CCTK_REAL *point_x_temp,CCTK_REAL *point_y_temp,CCTK_REAL *point_z_temp, \n",
+    "                             const CCTK_STRING input_array_names[1], CCTK_REAL *output_f[1]) {\n",
+    "  DECLARE_CCTK_PARAMETERS; \n",
+    "  CCTK_INT ierr;\n",
+    "\n",
+    "  const CCTK_INT NUM_INPUT_ARRAYS=1;\n",
+    "  const CCTK_INT NUM_OUTPUT_ARRAYS=1;\n",
+    "\n",
+    "  CCTK_STRING coord_system = \"cart3d\";\n",
+    "\n",
+    "  // Set up handles\n",
+    "  const CCTK_INT coord_system_handle = CCTK_CoordSystemHandle(coord_system);\n",
+    "  if (coord_system_handle < 0) {\n",
+    "    CCTK_VWarn(0, __LINE__, __FILE__, CCTK_THORNSTRING,\n",
+    "        \"can't get coordinate system handle for coordinate system \\\"%s\\\"!\",\n",
+    "               coord_system);\n",
+    "  }\n",
+    "\n",
+    "  const CCTK_INT operator_handle = CCTK_InterpHandle(interpolator_name);\n",
+    "  if (operator_handle < 0)\n",
+    "    CCTK_VWarn(0, __LINE__, __FILE__, CCTK_THORNSTRING,\n",
+    "               \"couldn't find interpolator \\\"%s\\\"!\",\n",
+    "               interpolator_name);\n",
+    "\n",
+    "  CCTK_INT param_table_handle = Util_TableCreateFromString(interpolator_pars);\n",
+    "  if (param_table_handle < 0) {\n",
+    "    CCTK_VWarn(0, __LINE__, __FILE__, CCTK_THORNSTRING,\n",
+    "               \"bad interpolator parameter(s) \\\"%s\\\"!\",\n",
+    "               interpolator_pars);\n",
+    "  }\n",
+    "  \n",
+    "  CCTK_INT operand_indices[NUM_INPUT_ARRAYS]; //NUM_OUTPUT_ARRAYS + MAX_NUMBER_EXTRAS];\n",
+    "  for(int i = 0 ; i < NUM_INPUT_ARRAYS  ; i++) {\n",
+    "    operand_indices[i] = i;\n",
+    "  }\n",
+    "  Util_TableSetIntArray(param_table_handle, NUM_OUTPUT_ARRAYS,\n",
+    "                        operand_indices, \"operand_indices\");\n",
+    "  \n",
+    "\n",
+    "  CCTK_INT opcodes[NUM_INPUT_ARRAYS];\n",
+    "  for(int i = 0 ; i < NUM_INPUT_ARRAYS  ; i++) {\n",
+    "    opcodes[i] = 0;\n",
+    "  }\n",
+    "  Util_TableSetIntArray(param_table_handle, NUM_OUTPUT_ARRAYS, \n",
+    "                        opcodes, \"opcodes\");\n",
+    "\n",
+    "  const void* interp_coords[3] \n",
+    "    = { (const void *) point_x_temp,\n",
+    "        (const void *) point_y_temp,\n",
+    "        (const void *) point_z_temp };\n",
+    "\n",
+    "  CCTK_INT input_array_indices[NUM_INPUT_ARRAYS];\n",
+    "  for(int i = 0 ; i < NUM_INPUT_ARRAYS ; i++) {\n",
+    "    input_array_indices[i] = CCTK_VarIndex(input_array_names[i]);\n",
+    "    if(input_array_indices[i] < 0) {\n",
+    "      CCTK_VWarn(0, __LINE__, __FILE__, CCTK_THORNSTRING,\n",
+    "        \"COULD NOT FIND VARIABLE '%s'.\",\n",
+    "        input_array_names[i]);\n",
+    "      exit(1);\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  CCTK_INT output_array_types[NUM_OUTPUT_ARRAYS];\n",
+    "  for(int i = 0 ; i < NUM_OUTPUT_ARRAYS ; i++) {\n",
+    "    output_array_types[i] = CCTK_VARIABLE_REAL;\n",
+    "  }\n",
+    "\n",
+    "  void * output_arrays[NUM_OUTPUT_ARRAYS]\n",
+    "    = { (void *) output_f[0] };\n",
+    "\n",
+    "  // actual interpolation call\n",
+    "  ierr = CCTK_InterpGridArrays(cctkGH,\n",
+    "                               3, // number of dimensions \n",
+    "                               operator_handle,\n",
+    "                               param_table_handle,\n",
+    "                               coord_system_handle,\n",
+    "                               interp_num_points,\n",
+    "                               CCTK_VARIABLE_REAL,\n",
+    "                               interp_coords,\n",
+    "                               NUM_INPUT_ARRAYS, // Number of input arrays\n",
+    "                               input_array_indices,\n",
+    "                               NUM_OUTPUT_ARRAYS, // Number of output arrays\n",
+    "                               output_array_types,\n",
+    "                               output_arrays);\n",
+    "  if (ierr<0) {\n",
+    "    CCTK_WARN(1,\"interpolation screwed up\");\n",
+    "    Util_TableDestroy(param_table_handle);\n",
+    "    exit(1);\n",
+    "  }\n",
+    "\n",
+    "  ierr = Util_TableDestroy(param_table_handle);\n",
+    "  if (ierr != 0) {\n",
+    "    CCTK_WARN(1,\"Could not destroy table\");\n",
+    "    exit(1);\n",
+    "  }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting up the Spherical Grids\n",
+    "\n",
+    "\n",
+    "* By default, we set logarithmic radial coordinates: $r(x_{0,i}) = R_0 + e^{x_{0,i}}$, where\n",
+    "  + $x_{0,i} = x_{0, \\mathrm{beg}} + \\left(i+\\frac{1}{2}\\right) \\Delta x_0$\n",
+    "  + $x_{0, {\\mathrm{beg}}} = \\log\\left( R_{\\mathrm{in}} - R_0 \\right)$\n",
+    "  + $\\Delta x_0 = \\frac{1}{N_0}\\log\\left(\\frac{R_\\mathrm{out} - R_0}{R_\\mathrm{in} - R_0}\\right)$\n",
+    "* As for the polar angle $\\theta$, there are two options:\n",
+    "  + **Option 1**: \n",
+    "  $$\n",
+    "  \\theta(x_{1,j})  \\, = \\, \\theta_c \\, + \\, \\left( \\pi - 2 \\theta_c \\right) x_{1,j} \\, \n",
+    "+ \\, \\xi \\, \\sin\\left(2 \\pi x_{1,j} \\right) \\text{, where}\n",
+    "$$\n",
+    "    + $x_{1,j} = x_{1, \\mathrm{beg}} + \\left(j+\\frac{1}{2}\\right) \\Delta x_1$\n",
+    "    + $\\Delta x_1 = \\frac{1}{N_1}$\n",
+    "  + **Option 2**: \n",
+    "  $$\n",
+    "  \\theta(x_{1,j}) = \\frac{\\pi}{2} \\left[  1  + \\left(1-\\xi \\right) \\left(2 x_{1,j} - 1 \\right) + \\left( \\xi - \\frac{2 \\theta_c}{\\pi} \\right) \\left( 2 x_{1,j} - 1 \\right)^n \\right] \\text{, where}\n",
+    "  $$,\n",
+    "    + $n$ is odd\n",
+    "    + $x_{1,j} = x_{1, \\mathrm{beg}} + \\left(j+\\frac{1}{2}\\right) \\Delta x_1$\n",
+    "    + $\\Delta x_1 = \\frac{1}{N_1}$\n",
+    "* The azimuthal angle $\\phi$ is uniform, so that $\\phi(x_{2,k}) = x_{2,k}$:\n",
+    "  + $x_{2,k} \\in [0,2\\pi]$\n",
+    "  + $x_{2,k} = x_{2, \\mathrm{beg}} + \\left(k+\\frac{1}{2}\\right)\\Delta x_{2}$\n",
+    "  + $\\Delta x_{2} = \\frac{ 2 \\pi }{N_2}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing interp_sph_grids_ETK/src/Set_up_interp_points_on_sph_grid.h\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile interp_sph_grids_ETK/src/Set_up_interp_points_on_sph_grid.h\n",
+    "\n",
+    "void sph_grid_Interpolate_many_pts__set_interp_pts(CCTK_ARGUMENTS) {\n",
+    "  DECLARE_CCTK_ARGUMENTS;\n",
+    "  DECLARE_CCTK_PARAMETERS;\n",
+    "\n",
+    "  CCTK_REAL dr  = (interp_r_max  - interp_r_min )/((CCTK_REAL)interp_Nr  - 1);\n",
+    "  CCTK_REAL dth = (interp_th_max - interp_th_min)/((CCTK_REAL)interp_Nth - 1);\n",
+    "  CCTK_REAL dph = (interp_ph_max - interp_ph_min)/((CCTK_REAL)interp_Nph - 1);\n",
+    "  CCTK_INT which_pt = 0;\n",
+    "  for(CCTK_INT k=0;k<interp_Nph;k++) for(CCTK_INT j=0;j<interp_Nth;j++) for(CCTK_INT i=0;i<interp_Nr;i++) {\n",
+    "        CCTK_REAL rr = interp_r_min  + dr *i;\n",
+    "        CCTK_REAL th = interp_th_min + dth*j;\n",
+    "        CCTK_REAL ph = interp_ph_min + dph*k;\n",
+    "\n",
+    "        points_x[which_pt] = rr*sin(th)*cos(ph);\n",
+    "        points_y[which_pt] = rr*sin(th)*sin(ph);\n",
+    "        points_z[which_pt] = rr*cos(th);\n",
+    "        which_pt++;\n",
+    "  }\n",
+    "}\n"
+   ]
   }
  ],
  "metadata": {
