--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -62,7 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting interp_sph_grids_ETK/src/Interpolate_to_sph_grid.h\n"
+      "Writing interp_sph_grids_ETK/src/Interpolate_to_sph_grid.h\n"
      ]
     }
    ],
@@ -211,7 +211,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting interp_sph_grids_ETK/src/Set_up_interp_points_on_sph_grid.h\n"
+      "Writing interp_sph_grids_ETK/src/Set_up_interp_points_on_sph_grid.h\n"
      ]
     }
    ],
@@ -271,7 +271,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting interp_sph_grids_ETK/src/output_to_file.h\n"
+      "Writing interp_sph_grids_ETK/src/output_to_file.h\n"
      ]
     }
    ],
@@ -339,7 +339,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting interp_sph_grids_ETK/src/main_function.cc\n"
+      "Writing interp_sph_grids_ETK/src/main_function.cc\n"
      ]
     }
    ],
@@ -412,7 +412,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting interp_sph_grids_ETK/src/interp_counter.cc\n"
+      "Writing interp_sph_grids_ETK/src/interp_counter.cc\n"
      ]
     }
    ],
@@ -529,6 +529,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compute all 40 4-Christoffels $\\Gamma^{\\mu}_{\\nu\\delta}$\n",
+    "\n",
+    "By definition,\n",
+    "$$\n",
+    "\\Gamma^{\\mu}_{\\nu\\delta} = \\frac{1}{2} g^{\\mu\\eta} \\left(g_{\\eta\\nu,\\delta} + g_{\\eta\\delta,\\nu} - g_{\\nu\\delta,\\eta}  \\right)\n",
+    "$$\n",
+    "\n",
+    "We are given $\\gamma_{ij}$, $\\alpha$, and $\\beta^i$ from ADMBase, so let's first compute the 4-metric\n",
+    "\n",
+    "$$\n",
+    "g_{\\mu\\nu} = \\begin{pmatrix} \n",
+    "-\\alpha^2 + \\beta^k \\beta_k & \\beta_i \\\\\n",
+    "\\beta_j & \\gamma_{ij}\n",
+    "\\end{pmatrix}.\n",
+    "$$\n",
+    "\n",
+    "The derivatives $g_{\\mu\\nu,\\eta}$ are then computed in terms of finite-difference derivatives of the input ADM gridfunctions $\\gamma_{ij}$, $\\alpha$, and $\\beta^i$, **assuming that the 4-metric is static, so that $\\partial_t g_{\\mu\\nu}=0$ for all $\\mu$ and $\\nu$**.\n",
+    "\n",
+    "To compute $g^{\\mu\\nu}$, we use the standard formula (Eq. 4.49 in [Gourgoulhon](https://arxiv.org/pdf/gr-qc/0703035.pdf)):\n",
+    "$$\n",
+    "g^{\\mu\\nu} = \\begin{pmatrix} \n",
+    "-\\frac{1}{\\alpha^2} & \\frac{\\beta^i}{\\alpha^2} \\\\\n",
+    "\\frac{\\beta^i}{\\alpha^2} & \\gamma^{ij} - \\frac{\\beta^i\\beta^j}{\\alpha^2}\n",
+    "\\end{pmatrix},\n",
+    "$$\n",
+    "where $\\gamma^{ij}$ is given by the inverse of $\\gamma_{ij}$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -616,7 +648,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting interp_sph_grids_ETK/src/interp_functions.cc\n"
+      "Writing interp_sph_grids_ETK/src/interp_functions.cc\n"
      ]
     }
    ],
