Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids: Start work on ccl files

--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -225,7 +225,7 @@
     "  CCTK_REAL dx0 = log( (Rout - R0) / (Rin - R0) ) / ((CCTK_REAL)N0);\n",
     "  CCTK_REAL dx1 = 1.0 / ((CCTK_REAL)N1);\n",
     "  CCTK_REAL dx2 = 1.0 / ((CCTK_REAL)N2);\n",
-    "\n",
+    "  CCTK_REAL x0_beg = log( Rin - R0 );\n",
     "  CCTK_INT which_pt = 0;\n",
     "  for(CCTK_INT k=0;k<N2;k++) for(CCTK_INT j=0;j<N1;j++) for(CCTK_INT i=0;i<N0;i++) {\n",
     "    CCTK_REAL x0_i = x0_beg + ((CCTK_REAL)i + 0.5)*dx0;\n",
@@ -292,7 +292,6 @@
     "  }\n",
     "\n",
     "  fwrite(&N0, sizeof(CCTK_INT), 1, file);\n",
-    "  fwrite(&x0_beg, sizeof(CCTK_REAL), 1, file);\n",
     "  fwrite(&R0, sizeof(CCTK_REAL), 1, file);\n",
     "  fwrite(&Rin, sizeof(CCTK_REAL), 1, file);\n",
     "  fwrite(&Rout, sizeof(CCTK_REAL), 1, file);\n",
@@ -513,7 +512,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NRPyoutfilename = \"interp_sph_grids_ETK/src/Interp_GF_list.cc\"\n",
+    "NRPyoutfilename = \"interp_sph_grids_ETK/src/list_of_functions_to_interpolate.h\"\n",
     "\n",
     "which_InterpCounter = 0\n",
     "\n",
@@ -619,39 +618,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# g^{\\mu\\nu} = \\begin{pmatrix}\n",
-    "# -\\frac{1}{\\alpha^2} & \\frac{\\beta^i}{\\alpha^2} \\\\\n",
-    "# \\frac{\\beta^i}{\\alpha^2} & \\gamma^{ij} - \\frac{\\beta^i\\beta^j}{\\alpha^2}\n",
-    "# \\end{pmatrix},\n",
-    "\n",
-    "# Eq. 2.121 in B&S\n",
-    "betaDdD = ixp.zerorank2()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        betaD[i] += gammaDD[i][j]*betaU[j]\n",
-    "\n",
     "betaDdD = ixp.zerorank2()\n",
     "gammaDD_dD = ixp.declarerank3(\"gammaDD_dD\",\"sym01\")\n",
     "betaU_dD   = ixp.declarerank2(\"betaU_dD\",\"nosym\")\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
+    "            # Recall that betaD[i] = gammaDD[i][j]*betaU[j] (Eq. 2.121 in B&S)\n",
     "            betaDdD[i][k] += gammaDD_dD[i][j][k]*betaU[j] + gammaDD[i][j]*betaU_dD[j][k]\n",
     "\n",
     "# Eq. 2.122 in B&S\n",
     "g4DDdD = ixp.zerorank3(DIM=4)\n",
     "alpha_dD   = ixp.declarerank1(\"alpha_dD\")\n",
     "for i in range(DIM):\n",
+    "    # Recall that g4DD[0][0] = -alpha^2 + betaU[i]*betaD[i]\n",
     "    g4DDdD[0][0][i+1] += -2*alpha*alpha_dD[i] \n",
     "    for j in range(DIM):\n",
     "        g4DDdD[0][0][i+1] += betaU_dD[j][i]*betaD[j] + betaU[j]*betaDdD[j][i]\n",
     "\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
+    "        # Recall that g4DD[i][0] = g4DD[0][i] = betaD[i]\n",
     "        g4DDdD[i+1][0][j+1] = g4DDdD[0][i+1][j+1] = betaDdD[i][j]\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
+    "            # Recall that g4DD[i][j] = gammaDD[i][j]\n",
     "            g4DDdD[i+1][j+1][k+1] = gammaDD_dD[i][j][k]\n",
     "\n",
     "gammaUU, dummyDET = ixp.symm_matrix_inverter3x3(gammaDD)\n",
@@ -689,12 +681,20 @@
     "                Gamma4UDD[mu][nu][delta] += sp.Rational(1,2)*g4UU[mu][eta]*\\\n",
     "                (g4DDdD[eta][nu][delta] + g4DDdD[eta][delta][nu] - g4DDdD[nu][delta][eta])\n",
     "\n",
+    "# Now output the 4-Christoffels to file:\n",
     "for mu in range(4):\n",
     "    for nu in range(4):\n",
     "        for delta in range(nu,4):\n",
     "            gf_interp_list.append(gf_interp(\"4-Christoffel GammaUDD\"+str(mu)+str(nu)+str(delta),order=\"4\"))\n",
     "            interp_expr = Gamma4UDD[mu][nu][delta]\n",
     "            which_InterpCounter = interp_fileout(which_InterpCounter,interp_expr,NRPyoutfilename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Next we write the function for the above NRPy+ output"
    ]
   },
   {
@@ -706,24 +706,243 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting interp_sph_grids_ETK/src/interp_functions.cc\n"
+      "Overwriting interp_sph_grids_ETK/src/interpolate_single_function.cc\n"
      ]
     }
    ],
    "source": [
-    "%%writefile interp_sph_grids_ETK/src/interp_functions.cc\n",
+    "%%writefile interp_sph_grids_ETK/src/interpolate_single_function.cc\n",
     "\n",
     "// Set the gridfunction interped_gf, according to the interpolation counter variable interp_counter.\n",
     "//    For example, we might interpolate \"IllinoisGRMHD::rho_b\" if interp_counter==0. The following\n",
-    "//    function takes care of these\n"
+    "//    function takes care of these\n",
+    "void list_of_functions_to_interpolate(cGH *cctkGH,const CCTK_INT *cctk_lsh,const CCTK_INT *cctk_nghostzones,\n",
+    "                                     const CCTK_INT *InterpCounter,\n",
+    "                                     const CCTK_REAL *gammaDD00GF,const CCTK_REAL *gammaDD01GF,const CCTK_REAL *gammaDD02GF,\n",
+    "                                     const CCTK_REAL *gammaDD11GF,const CCTK_REAL *gammaDD12GF,const CCTK_REAL *gammaDD22GF,\n",
+    "                                     const CCTK_REAL *betaU0GF,const CCTK_REAL *betaU1GF,const CCTK_REAL *betaU2GF,\n",
+    "                                     const CCTK_REAL *alphaGF,   CCTK_REAL *interped_gfGF) {\n",
+    "#include \"list_of_functions_to_interpolate.h\"\n",
+    "}\n",
+    "\n",
+    "void Interpolate_single_function(CCTK_ARGUMENTS) {\n",
+    "  DECLARE_CCTK_ARGUMENTS;\n",
+    "  DECLARE_CCTK_PARAMETERS;\n",
+    "  list_of_functions_to_interpolate(cctkGH,cctk_lsh,cctk_nghostzones,\n",
+    "                                   InterpCounter,\n",
+    "                                   gxx,gxy,gxz,gyy,gyz,gzz,\n",
+    "                                   betax,betay,betaz,alpha, interped_gf);\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting interp_sph_grids_ETK/src/make.code.defn\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile interp_sph_grids_ETK/src/make.code.defn\n",
+    "# Main make.code.defn file for thorn interp_sph_grids_ETK\n",
+    "\n",
+    "# Source files in this directory\n",
+    "SRCS =  main_function.cc interp_counter.cc interpolate_single_function.cc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure\n",
+    "\n",
+    "Writing a module (\"thorn\") within the Einstein Toolkit requires that three \"ccl\" files be constructed, all in the root directory of the thorn:\n",
+    "\n",
+    "1. $\\text{interface.ccl}$: defines the gridfunction groups needed, and provides keywords denoting what this thorn provides and what it should inherit from other thorns.\n",
+    "1. $\\text{param.ccl}$: specifies free parameters within the thorn.\n",
+    "1. $\\text{schedule.ccl}$: allocates storage for gridfunctions, defines how the thorn's functions should be scheduled in a broader simulation, and specifies the regions of memory written to or read from gridfunctions.\n",
+    "\n",
+    "Let's start with $\\text{interface.ccl}$. The [official Einstein Toolkit (Cactus) documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManual.html) defines what must/should be included in an interface.ccl file [**here**](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-260000C2.2). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting interp_sph_grids_ETK/interface.ccl\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile interp_sph_grids_ETK/interface.ccl\n",
+    "\n",
+    "# With \"implements\", we give our thorn its unique name.\n",
+    "implements: interp_sph_grids_ETK\n",
+    "\n",
+    "# By \"inheriting\" other thorns, we tell the Toolkit that we \n",
+    "#   will rely on variables/function that exist within those\n",
+    "#   functions. \n",
+    "inherits:   admbase IllinoisGRMHD Grid\n",
+    "\n",
+    "# Tell the Toolkit that we want \"interped_gf\" and \"InterpCounter\"\n",
+    "#    and invariants to NOT be visible to other thorns, by using \n",
+    "#    the keyword \"private\". Note that declaring these \n",
+    "#    gridfunctions here *does not* allocate memory for them;\n",
+    "#    that is done by the schedule.ccl file.\n",
+    "private:\n",
+    "CCTK_REAL interpolation_gf type=GF timelevels=1 tags='InterpNumTimelevels=1 prolongation=\"none\" Checkpoint=\"no\"'\n",
+    "{\n",
+    "  interped_gf\n",
+    "} \"Gridfunction containing output from interpolation.\"\n",
+    "\n",
+    "int InterpCounterVar type = SCALAR tags='checkpoint=\"no\"'\n",
+    "{\n",
+    "  InterpCounter\n",
+    "} \"Counter that keeps track of which function we are interpolating.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will now write the file $\\text{param.ccl}$. This file allows the listed parameters to be set at runtime. We also give allowed ranges and default values for each parameter. More information on this file's syntax can be found in the [official Einstein Toolkit documentation](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-265000C2.3). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting interp_sph_grids_ETK/param.ccl\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile interp_sph_grids_ETK/param.ccl\n",
+    "\n",
+    "restricted:\n",
+    "    \n",
+    "########################################\n",
+    "# BASIC THORN STEERING PARAMETERS\n",
+    "CCTK_INT interp_out_iteration \"Which iteration to interpolate to spherical grids?\" STEERABLE=RECOVER\n",
+    "{\n",
+    "  0:* :: \"\"\n",
+    "} 960000\n",
+    "    \n",
+    "########################################\n",
+    "# SPHERICAL COORDINATE SYSTEM PARAMETERS\n",
+    "CCTK_INT N0 \"Number of points in r direction\" STEERABLE=RECOVER\n",
+    "{\n",
+    "  0:* :: \"\"\n",
+    "} 96\n",
+    "\n",
+    "CCTK_INT N1 \"Number of points in theta direction\" STEERABLE=RECOVER\n",
+    "{\n",
+    "  0:* :: \"\"\n",
+    "} 96\n",
+    "\n",
+    "CCTK_INT N2 \"Number of points in phi direction\" STEERABLE=RECOVER\n",
+    "{\n",
+    "  0:* :: \"\"\n",
+    "} 96\n",
+    "\n",
+    "##########\n",
+    "# Radial parameters:\n",
+    "CCTK_REAL R0 \"Radial offset: r(x0) = R_0 + exp(x0). Probably should keep it set to zero.\" STEERABLE=RECOVER\n",
+    "{\n",
+    "  0:* :: \"\"\n",
+    "} 0.0\n",
+    "\n",
+    "CCTK_REAL Rin \"x0 offset: x0 = log(Rin-R0) + (i + 0.5)Dx0.\" STEERABLE=RECOVER\n",
+    "{\n",
+    "  0:* :: \"\"\n",
+    "} 1.08986052555408\n",
+    "\n",
+    "CCTK_REAL Rout \"Dx0 = log( (Rout-R0) / (Rin-R0) )/N0\" STEERABLE=RECOVER\n",
+    "{\n",
+    "  0:* :: \"\"\n",
+    "} 80.0\n",
+    "\n",
+    "##########\n",
+    "# Theta parameters:\n",
+    "CCTK_REAL x1_beg \"x1 offset: x1 = x1_beg + (j + 0.5)Dx1. Probably should keep it set to zero.\" STEERABLE=RECOVER\n",
+    "{\n",
+    "  0:* :: \"\"\n",
+    "} 0.0\n",
+    "\n",
+    "CCTK_INT theta_option \"Which prescription for theta should be used? 1 or 2?\" STEERABLE=RECOVER\n",
+    "{\n",
+    "  1:2 :: \"\"\n",
+    "} 1\n",
+    "\n",
+    "CCTK_REAL th_c \"theta_c: Angular cutout size for theta = 0 and pi\" STEERABLE=RECOVER\n",
+    "{\n",
+    "  0:* :: \"\"\n",
+    "} 0.053407075111026485 # 0.017*pi\n",
+    "\n",
+    "CCTK_REAL xi \"Amplitude of nonlinear part of the theta distribution.\" STEERABLE=RECOVER\n",
+    "{\n",
+    "  0:* :: \"\"\n",
+    "} 0.25\n",
+    "\n",
+    "CCTK_INT th_n \"Power of nonlinear part of theta distribution. Only for theta_option=2\" STEERABLE=RECOVER\n",
+    "{\n",
+    "  0:* :: \"\"\n",
+    "} 9\n",
+    "\n",
+    "##########\n",
+    "# Phi parameters:\n",
+    "CCTK_REAL x2_beg \"x2 offset: x2 = x2_beg + (k + 0.5)Dx2. Probably should keep it set to zero.\" STEERABLE=RECOVER\n",
+    "{\n",
+    "  0:* :: \"\"\n",
+    "} 0.0\n",
+    "########################################"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we will write the file $\\text{schedule.ccl}$; its official documentation is found [here](http://cactuscode.org/documentation/referencemanual/ReferenceManualch8.html#x12-268000C2.4). \n",
+    "\n",
+    "This file declares storage for variables declared in the $\\text{interface.ccl}$ file and specifies when the various parts of the thorn will be run:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing WeylScal4NRPy/schedule.ccl\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile WeylScal4NRPy/schedule.ccl\n",
+    "\n",
+    "STORAGE: interpolation_gf[1]\n",
+    "STORAGE: InterpCounterVar\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
