Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids: Add schedule.ccl. Compiles fine.

--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -349,16 +349,15 @@
     "%%writefile interp_sph_grids_ETK/src/main_function.cc\n",
     "\n",
     "// Include needed ETK & C library header files:\n",
-    "#include <assert.h>\n",
     "#include <stdio.h>\n",
     "#include <stdlib.h>\n",
     "#include <string.h>\n",
     "#include <math.h>\n",
-    "#include <ctype.h>\n",
+    "// Needed for dealing with Cactus/ETK infrastructure\n",
     "#include \"cctk.h\"\n",
     "#include \"cctk_Arguments.h\"\n",
     "#include \"cctk_Parameters.h\"\n",
-    "#include \"cctk_Functions.h\"\n",
+    "// Needed for low-level interpolation functions\n",
     "#include \"util_Table.h\"\n",
     "#include \"util_String.h\"\n",
     "\n",
@@ -377,8 +376,6 @@
     "  // Set up spherically sampled interpolation grid arrays points_x,points_y,points_z: \n",
     "  sph_grid_Interpolate_many_pts__set_interp_pts(CCTK_PASS_CTOC);\n",
     "\n",
-    "    \n",
-    "    \n",
     "  // Set up output array:\n",
     "  CCTK_REAL *output_f[1];\n",
     "  output_f[0] = output_interped;\n",
@@ -408,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,19 +646,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting interp_sph_grids_ETK/src/interpolate_single_function.cc\n"
+      "Writing interp_sph_grids_ETK/src/construct_function_to_interpolate__store_to_interped_gf.cc\n"
      ]
     }
    ],
    "source": [
-    "%%writefile interp_sph_grids_ETK/src/interpolate_single_function.cc\n",
+    "%%writefile interp_sph_grids_ETK/src/construct_function_to_interpolate__store_to_interped_gf.cc\n",
     "#include <stdio.h>\n",
     "#include <stdlib.h>\n",
     "#include \"cctk.h\"\n",
@@ -682,7 +679,7 @@
     "#include \"list_of_functions_to_interpolate.h\"\n",
     "}\n",
     "\n",
-    "void Interpolate_single_function(CCTK_ARGUMENTS) {\n",
+    "void construct_function_to_interpolate__store_to_interped_gf(CCTK_ARGUMENTS) {\n",
     "  DECLARE_CCTK_ARGUMENTS;\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
     "  const CCTK_REAL invdx0 = 1.0 / CCTK_DELTA_SPACE(0);\n",
@@ -705,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +744,7 @@
     "  if(verbose==2) printf(\"interp_sph_grids_ETK: Just set InterpCounter to %d\\n\",*InterpCounter);\n",
     "}\n",
     "\n",
-    "void SphGrid_GRMHD_InitializeInterpCounter(CCTK_ARGUMENTS)\n",
+    "void SphGrid_InitializeInterpCounter(CCTK_ARGUMENTS)\n",
     "{\n",
     "  DECLARE_CCTK_ARGUMENTS;\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
@@ -759,7 +756,7 @@
     "  }\n",
     "}\n",
     "\n",
-    "void SphGrid_GRMHD_DecrementInterpCounter(CCTK_ARGUMENTS)\n",
+    "void SphGrid_DecrementInterpCounter(CCTK_ARGUMENTS)\n",
     "{\n",
     "  DECLARE_CCTK_ARGUMENTS;\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
@@ -771,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +784,7 @@
     "# Main make.code.defn file for thorn interp_sph_grids_ETK\n",
     "\n",
     "# Source files in this directory\n",
-    "SRCS =  main_function.cc interp_counter.cc interpolate_single_function.cc"
+    "SRCS =  main_function.cc interp_counter.cc construct_function_to_interpolate__store_to_interped_gf.cc"
    ]
   },
   {
@@ -807,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -995,15 +992,54 @@
     "\n",
     "STORAGE: interpolation_gf[1]\n",
     "STORAGE: InterpCounterVar\n",
-    "STORAGE: interp_pointcoords_and_output_arrays"
+    "STORAGE: interp_pointcoords_and_output_arrays\n",
+    "    \n",
+    "#############################\n",
+    "SCHEDULE SphGrid_InitializeInterpCounterToZero AT CCTK_INITIAL\n",
+    "{\n",
+    "  LANG: C\n",
+    "  OPTIONS: GLOBAL\n",
+    "} \"Initialize InterpCounter variable to zero\"\n",
+    "\n",
+    "SCHEDULE SphGrid_InitializeInterpCounterToZero AT CCTK_POST_RECOVER_VARIABLES\n",
+    "{\n",
+    "  LANG: C\n",
+    "  OPTIONS: GLOBAL\n",
+    "} \"Initialize InterplCounter variable to zero\"\n",
+    "\n",
+    "SCHEDULE SphGrid_InitializeInterpCounter before VI_GRMHD_VolumeIntegralGroup AT CCTK_ANALYSIS\n",
+    "{\n",
+    "  LANG: C\n",
+    "  OPTIONS: GLOBAL\n",
+    "} \"Initialize InterpCounter variable\"\n",
+    "##################\n",
+    "\n",
+    "SCHEDULE GROUP SphGrid_InterpGroup AT CCTK_ANALYSIS BEFORE CarpetLib_printtimestats BEFORE CarpetLib_printmemstats WHILE interp_sph_grids_ETK::InterpCounterVar\n",
+    "{\n",
+    "} \"Perform all spherical interpolations. This group is only actually scheduled at cctk_iteration==interp_out_iteration.\"\n",
+    "\n",
+    "SCHEDULE construct_function_to_interpolate__store_to_interped_gf in SphGrid_InterpGroup before DoSum\n",
+    "{\n",
+    "  STORAGE: interpolation_gf,InterpCounterVar,interp_pointcoords_and_output_arrays\n",
+    "  OPTIONS: GLOBAL,LOOP-LOCAL\n",
+    "  SYNC: interpolation_gf\n",
+    "  LANG: C\n",
+    "} \"Construct the function to interpolate\"\n",
+    "\n",
+    "SCHEDULE Interpolate_to_sph_grid_main_function in SphGrid_InterpGroup after construct_function_to_interpolate__store_to_interped_gf\n",
+    "{\n",
+    "  OPTIONS: GLOBAL\n",
+    "  LANG: C\n",
+    "} \"Perform interpolation and output result to file.\"\n",
+    "#######\n",
+    "SCHEDULE SphGrid_DecrementInterpCounter in SphGrid_InterpGroup after Interpolate_to_sph_grid_main_function\n",
+    "{\n",
+    "  LANG: C\n",
+    "  OPTIONS: GLOBAL\n",
+    "} \"Decrement InterpCounter variable\"\n",
+    "##################\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
