Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide: Output at t=0 for debugging, for now

--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -5,6 +5,14 @@
    "metadata": {},
    "source": [
     "<img height=\"60px\" src=\"https://math.wvu.edu/~zetienne/SENR/images/NRPyPlusLogo.png\" align=\"center\" hspace=\"20px\" vspace=\"5px\">\n",
+    "<script async src=\"https://www.googletagmanager.com/gtag/js?id=UA-59152712-8\"></script>\n",
+    "<script>\n",
+    "  window.dataLayer = window.dataLayer || [];\n",
+    "  function gtag(){dataLayer.push(arguments);}\n",
+    "  gtag('js', new Date());\n",
+    "\n",
+    "  gtag('config', 'UA-59152712-8');\n",
+    "</script>\n",
     "\n",
     "# NRPy+ Tutorial\n",
     "\n",
@@ -48,6 +56,7 @@
     "    + [Brill-Lindquist: Setting up two black hole initial data](Tutorial-ADM_Initial_Data-Brill-Lindquist.ipynb)\n",
     "    + [ADM Cartesian to BSSN Curvilinear Initial Data Conversion](Tutorial-ADM_Initial_Data-Converting_ADMCartesian_to_BSSNCurvilinear.ipynb)\n",
     "    + **Start-to-Finish Example**: [Two-black-hole initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_two_BH_initial_data.ipynb)\n",
+    "    + **Start-to-Finish Example**: [Colliding black holes!](Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb)\n",
     "    + Application (in progress) [Adding the $8\\pi T^{\\mu\\nu}$ source terms to the BSSN Equations](Tutorial-BSSNCurvilinear_Plus_Matter_Sources.ipynb)\n"
    ]
   }
